frontend/test/should_pass/bitbucket17.gm
node class MyNode {
    procedure init2(var a:int, var b:int){
        return;
    }
    procedure init3(var a:int, var b:int, var c:int){
        return;
    }
}