frontend/test/should_fail/computations_no_assign_func_method.gm
node class N
{
	x:int;
	
	function bar() : int
	{
		this.x = 42;
		return(this.x);
	}
}
